@@ -1,6 +1,7 @@
 = Version History =
 x.x:
 
+- added: a index widget (for Widget Manager) to show the latest discussions
 - fixed: outstanding invitations and membership request not always cleaned up
 
 2.1 (2012-04-16):
